# AbstractedGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  hoq
agl/include/agl/: application.hpp  deque.hpp  dictionary.hpp  list.hpp  set.hpp  unique-ptr.hpp  vector.hpp
agl/include/agl/core/: application-resource.hpp  application.hpp  debug.hpp  event.hpp  events.hpp  layer.hpp  logger.hpp  resources.hpp  threads.hpp  window.hpp  windows-resource.hpp
agl/include/agl/ecs/: component.hpp  components.hpp  ecs.hpp  entity.hpp  storage.hpp  system.hpp
agl/include/agl/ecs/systems/: gl-renderer.hpp
agl/include/agl/memory/: allocator.hpp  deque.hpp  dictionary.hpp  pool.hpp  set.hpp  unique-ptr.hpp  vector.hpp
agl/include/agl/render/: buffer.hpp  clear-type.hpp  feature-type.hpp  render-data-type.hpp  renderer.hpp  shader.hpp  window.hpp
agl/include/agl/render/opengl/: call.hpp  clear-type.hpp  debug.hpp  feature-type.hpp  renderer.hpp  shader.hpp  util.hpp  window.hpp
agl/include/agl/service/: service.hpp
agl/include/agl/util/: async.hpp  clock.hpp  deque.hpp  dictionary.hpp  iterator.hpp  logger.hpp  pair.hpp  random.hpp  set.hpp  thread.hpp  time.hpp  timestamp.hpp  type-traits.hpp  typeid.hpp  unique-ptr.hpp  util.hpp  vector.hpp
agl/include/agl/util/container/: vector.hpp
agl/include/agl/util/mem/: pool.hpp
agl/include/agl/util/memory/: allocator.hpp  containers.hpp  deque.hpp  dictionary.hpp  pool.hpp  pool.inl  set.hpp  unique-ptr.hpp  vector.hpp
agl/src/: application.cpp  entry-point.cpp
agl/src/core/: application.cpp  entry-point.cpp  event.cpp  events.cpp  layer.cpp  logger.cpp  threads.cpp  window.cpp  windows-resource.cpp
agl/src/ecs/: ecs.cpp  entity.cpp  system.cpp
agl/src/ecs/systems/: gl-renderer.cpp  gl-renderer.hpp
agl/src/memory/: pool.cpp
agl/src/render/: buffer.cpp  render-data-type.cpp  renderer.cpp  shader.cpp  window.cpp
agl/src/render/opengl/: call.cpp  renderer.cpp  shader.cpp  util.cpp  window.cpp
agl/src/util/: async.cpp  clock.cpp  thread.cpp  timestamp.cpp  util.cpp
agl/src/util/memory/: pool.cpp
agl/test/: container-test.cpp  containers-test.cpp  ecs-test.cpp  mem-test.cpp  test.cpp  util-test.cpp
debug/: agl_lib.natvis
editor/include/editor/: layer.hpp
editor/src/: editor.cpp  layer.cpp
editor/src/editor/: editor.cpp  layer.cpp
main/src/: entry-point.cpp
resources/shader/: basic.glsl
